--- a/liberia_workfile.Rmd
+++ b/liberia_workfile.Rmd
@@ -9,6 +9,8 @@ editor_options:
 
 ```{r setup, include=FALSE}
 
+knitr::opts_chunk$set(echo = FALSE)
+
 if (!require("pacman")) install.packages("pacman")
 pkgs = c("PrevMap", "tmap", "Hmisc", "automap", "sf", "psych") # package names
 pacman::p_load(pkgs, character.only = T)
@@ -18,6 +20,10 @@ library(dplyr)
 library(sf)
 library(tmap)
 library(geoR)
+
+```
+
+```{r liberia, echo = FALSE, warning = FALSE}
 
 liberia <- read.csv("data/Liberia_STH.csv")
 
@@ -230,9 +236,7 @@ writeRaster(HKprevalence, "outcome/HKprediction.tif", format = 'GTiff',overwrite
 writeRaster(Ascprevalence, "outcome/Ascprediction.tif", format = 'GTiff',overwrite= TRUE)
 
 
-
-
-
-
 ```
+
+
 
